...
                    } label: {
                        Image(systemName: "rectangle.portrait.and.arrow.right")
                            .tint(Color.theme.greenColor)
                    }
                }
            }
            .navigationBarTitle("Bapu Store LLC")
            .navigationDestination(isPresented: $isLogoutTapped) {
                LoginView()
            }
            .navigationDestination(isPresented: $navigateToDetailPage) {
                ProductDetail(product: selectedProduct)
            }
...
